--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask-Cors==3.0.10
 Flask-Login==0.6.2
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
+Flask-PyMongo==2.3.0  # Adjusted to a valid version
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 SQLAlchemy==1.4.44
@@ -14,10 +15,9 @@ gunicorn==20.1.0
 psycopg2-binary==2.9.3
 cryptography==37.0.4
 pyjwt==2.4.0
-numpy==1.23.3
+numpy==1.21.6  # Adjusted to a compatible version
 
 # Additional packages for MongoDB and data visualization
-Flask-PyMongo==2.5.1
 pandas==2.0.3
 plotly==5.13.1
 
